# ivcap-crewai-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING_GUIDE.md  artifact_manager.py  builtin_tools.json  crew_ai_service.py  download_manager.py  events.py  ivcap_langgraph_tool.py  ivcap_tool.py  knowledge_processor.py  llm_factory.py  logging.json  no_posthog.py  pyproject.toml  requirements-dev.txt  requirements.txt  service.json  service.py  service_types.py  submitted_jobs_20251114_164231.txt  task.py  utils.py  vectordb.py
crews/: .ivcap-deep_search.json.txt  brainstorming.json  brainstorming_with_artifacts.json  deep_search.json  langgraph_specialist_simple.json  reference_validation_crew.json  research_specialist_langgraph.json  simple_crew.json  topic_overview.json
crews/templates/: brainstorming.json
examples/: README_brainstorming_artifacts.md  brainstorming_with_artifacts_request.json  simple_crew.json  simple_crew2.json
examples/queue/: simple_crew.json
tests/: QUICK_START.md  README.md  asa_test.json  brainstorming_copilot_test.json  competitive_analysis_test.json  creativity_enhancement_test.json  die_test.json  disease_mechanism_test.json  expert_finder_test.json  expert_profiles_test.json  funding_finder_test.json  grant_proposal_test.json  manuscript_template_test.json  market_research_test.json  patent_landscape_test.json  patent_search_test.json  risk_analysis_test.json  run_all_tests.sh  scientific_review_writer_test.json  submit_all_orders.sh  topic_overview_test.json
tools/: search.py  url_metadata_extractor.py
