[project]
name = "ivcap-crew-ai"
version = "0.1.0"
description = "Executes queries or chats with the CrewAI agent framework."
authors = [
    {name = "Max Ott",email = "max.ott@data61.csiro.au"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai (>=0.134.0,<0.135.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "ivcap-ai-tool (>=0.7.7,<0.8.0)",
    "langchain-core (>=0.3.62,<0.4.0)",
    "datamodel-code-generator (>=0.30.1,<0.31.0)",
    "embedchain (>=0.1.128,<0.2.0)",
    "crewai-tools (>=0.46.0,<0.47.0)",
    "ivcap-service (>=0.5.8,<0.6.0)"
]

[tool.poetry-plugin-ivcap]
service-file = "service.py"
service-id = "urn:ivcap:service:01555c28-32d0-5839-b92b-f3e52410d6dd"
service-type = "lambda"
port = 8077
# docker
#docker-run-opts = ["--port", "9999" ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
